# MLOps_project

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile_fastapi  README.md  app.py  bash_commands.txt  data.dvc  docker-compose.yml  example_requests.txt  main.py  models.py  pyproject.toml  requirements.txt  streamlit.py
.dvc/: config  config.local
.dvc/tmp/: lock
minio_data/.minio.sys/: format.json
models/: LogisticRegression.pickle  RandomForest.pickle
src/: models.py  models_manager.py  streamlit.py
tests/: get_av_methods_test.py  mock_test.py
