[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Denis Almukhametov, Ilya Yarusskiy"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
scikit-learn = "1.5.0"
fastapi = {version = "0.115.0", extras = ["all"]}
streamlit = "^1.41.1"
psutil = "^6.1.1"
minio = "^7.2.13"
plotly = "^5.24.1"
python-dotenv = "^1.0.1"
mlflow = "^2.19.0"
dvc = "^3.58.0"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
pip-tools = "^7.4.1"
black = "^24.10.0"
ruff = "^0.8.4"
mypy = "^1.13.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
